--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "expense tracking application",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "http-error": "^0.0.6",
     "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "nodemon": "^3.1.0"
   }
 }
