--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "http-error": "^0.0.6",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "nodemon": "^3.1.0"
