deleted unnecessary files

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ AUTH_TOKEN_HEADER_FIELD = token
 
 PASSWORD_SALT = Bokakhat@123
 
+SSL_KEY = /Users/adityadey/key.pem
+SSL_CERT = /Users/adityadey/cert.pem
