changes made in aws server

--- a/.env
+++ b/.env
@@ -10,9 +10,14 @@ COLLECTION_NAMES_BUSINESS = business
 
 EVENT_NAMES_TRANSACTIONS_CREATED = transaction-created
 
-JWT_SECRET = Bokakhat@123
+JWT_SECRET = S-E-C-R-E-T-I-T-I-S
 
 AUTH_TOKEN_HEADER_FIELD = token
 
-PASSWORD_SALT = Bokakhat@123
+PASSWORD_SALT = B-o-kakhat-@-12-3
 
+SSL_KEY = /home/admin/ssl/privkey.pem
+SSL_CERT = /home/admin/ssl/fullchain.pem
+
+CORS_ORIGIN_1 = https://adityadey.com
+CORS_ORIGIN_2 = https://www.adityadey.com
