edited the env file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MONGODBURI = mongodb://127.0.0.1:27017
+MONGODBURI = mongodb://127.0.0.1:27019
 DB_NAME = expense-tracker
 
-APP_PORT = 3090
+APP_PORT = 8090
 
 COLLECTION_NAMES_USERS = expense-tracker-users
 COLLECTION_NAMES_TRANSACTIONS = transactions
@@ -10,15 +10,9 @@ COLLECTION_NAMES_BUSINESS = business
 
 EVENT_NAMES_TRANSACTIONS_CREATED = transaction-created
 
-JWT_SECRET = S-E-C-R-E-T-I-T-I-S
+JWT_SECRET = jwt_secret
 
 AUTH_TOKEN_HEADER_FIELD = token
 
-PASSWORD_SALT = B-o-kakhat-@-12-3
+PASSWORD_SALT = password_salt
 
-<<<<<<< HEAD:.env
-
-CORS_ORIGIN_1 = https://adityadey.com
-CORS_ORIGIN_2 = https://www.adityadey.com
-=======
->>>>>>> c123542df8e888c9c5a02450f5655830ce31cca9:.env.example
