--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -18,6 +19,8 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "nodemon": "^3.1.0"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.0",
+    "querystring": "^0.2.1"
   }
 }
